# entt-meets-sol2

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: AddExample.cmake  AddScripts.cmake
examples/: CMakeLists.txt  meta_helper.hpp
examples/common/: kbhit.hpp  meta_helper.hpp  transform.hpp
examples/dispatcher/: CMakeLists.txt  bond.hpp  main.cpp
examples/registry/: CMakeLists.txt  bond.hpp  main.cpp
examples/scheduler/: CMakeLists.txt  main.cpp  script_process.hpp
examples/system/: CMakeLists.txt  main.cpp
scripts/: behavior_script.lua  define_event.lua  iterate_entities.lua  more_events.lua  more_listeners.lua  native_event.lua  process_chain.lua  registry_simple.lua  scripted_event.lua  test_event_handler.lua  test_process.lua
utility/: CMakeLists.txt  meta_helper.hpp
